--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,102 +1,59 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/background_main"
     android:orientation="vertical" >
 
-    <TabHost
-        android:id="@android:id/tabhost"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="fill_parent"
+        android:layout_height="40.0dip"
+        android:background="#FFFFFF" >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" >
+        <TextView
+            android:id="@+id/text1"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1.0"
+            android:gravity="center"
+            android:text=" 近期热门"
+            android:textColor="#000000"
+            android:textSize="20.0dip" />
 
-            <TabWidget
-                android:id="@android:id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
-                <TextView 
-	  		
-	  		android:layout_width="wrap_content"
-	  		android:layout_height="wrap_content"
-	  		
-	  		android:layout_marginTop="5dp"
-	  		android:text="@string/hello_world"
-	  		style="@style/normalText"/> 
-	  		<TextView 
-	  		
-	  		android:layout_width="wrap_content"
-	  		android:layout_height="wrap_content"
-	  		
-	  		android:layout_marginTop="5dp"
-	  		android:text="@string/hello_world"
-	  		style="@style/normalText"/> 
-	  		<TextView 
-	  		
-	  		android:layout_width="wrap_content"
-	  		android:layout_height="wrap_content"
-	  		
-	  		android:layout_marginTop="5dp"
-	  		android:text="@string/app_name"
-	  		style="@style/normalText"/> 
-            </TabWidget>
+        <TextView
+            android:id="@+id/text2"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1.0"
+            android:gravity="center"
+            android:text="最高收视"
+            android:textColor="#000000"
+            android:textSize="20.0dip" />
 
-            <FrameLayout
-                android:id="@android:id/tabcontent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+        <TextView
+            android:id="@+id/text3"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1.0"
+            android:gravity="center"
+            android:text="猜你喜欢"
+            android:textColor="#000000"
+            android:textSize="20.0dip" />
+    </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/tab1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"  >
-                    <TextView 
-	  		
-	  		android:layout_width="wrap_content"
-	  		android:layout_height="wrap_content"
-	  		
-	  		android:layout_marginTop="5dp"
-	  		android:text="@string/login_label_username"
-	  		style="@style/normalText"/> 
-                    
-                </LinearLayout>
+    <ImageView
+        android:id="@+id/cursor"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="matrix"
+        android:src="@drawable/cursor_main" />
 
-                <LinearLayout
-                    android:id="@+id/tab2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-                    <TextView 
-	  		
-	  		android:layout_width="wrap_content"
-	  		android:layout_height="wrap_content"
-	  		
-	  		android:layout_marginTop="5dp"
-	  		android:text="@string/hello_world"
-	  		style="@style/normalText"/> 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/tab3"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" 
-                    android:orientation="vertical">
-                    <TextView 
-	  		
-	  		android:layout_width="wrap_content"
-	  		android:layout_height="wrap_content"
-	  		
-	  		android:layout_marginTop="5dp"
-	  		android:text="@string/login_label_password"
-	  		style="@style/normalText"/> 
-                </LinearLayout>
-            </FrameLayout>
-        </LinearLayout>
-    </TabHost>
-
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vPager"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="1.0"
+        android:background="#000000"
+        android:flipInterval="30"
+        android:persistentDrawingCache="animation" />
 </LinearLayout>
