--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1.0"
             android:gravity="center"
-            android:text=" 近期热门"
+            android:text="@string/main_tab1"
             android:textColor="#000000"
             android:textSize="20.0dip" />
 
@@ -25,7 +25,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1.0"
             android:gravity="center"
-            android:text="最高收视"
+            android:text="@string/main_tab2"
             android:textColor="#000000"
             android:textSize="20.0dip" />
 
@@ -35,7 +35,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1.0"
             android:gravity="center"
-            android:text="猜你喜欢"
+            android:text="@string/main_tab3"
             android:textColor="#000000"
             android:textSize="20.0dip" />
     </LinearLayout>
