--- a/res/layout/activity_main_lay1.xml
+++ b/res/layout/activity_main_lay1.xml
@@ -4,5 +4,10 @@
     android:orientation="vertical" 
     android:background="@drawable/background_main_lay1">
 
-    
+    <ListView 
+        android:id="@+id/activity_main_lay1_listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        
+    </ListView>
 </LinearLayout>
