--- a/res/layout/activity_main_lay1.xml
+++ b/res/layout/activity_main_lay1.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -12,7 +13,7 @@
         android:src="@drawable/cat" />
     <ListView 
         android:id="@+id/activity_main_lay1_listview"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content">
         
     </ListView>
