--- a/res/layout/activity_main_lay1.xml
+++ b/res/layout/activity_main_lay1.xml
@@ -2,15 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/background_main_lay1"
+    android:background="@drawable/color_white"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/activity_main_lay1_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:src="@drawable/cat" />
+    
     <ListView 
         android:id="@+id/activity_main_lay1_listview"
         android:layout_width="fill_parent"
