--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/background_login">
-    <!-- padding 内边距   layout_margin 外边距
-  		android:layout_alignParentTop 布局的位置是否处于顶部 -->
+    android:background="@drawable/background_login"
+    android:orientation="vertical" >
+
+    <!--
+         padding 内边距   layout_margin 外边距
+  		android:layout_alignParentTop 布局的位置是否处于顶部
+    -->
 
     <ImageView
         android:id="@+id/recSys_logo"
@@ -16,72 +18,77 @@
         android:layout_marginRight="50dp"
         android:layout_marginStart="25dp"
         android:src="@drawable/logo" />
-  		
-  	<RelativeLayout 
-  	    android:id="@+id/login_div"
-  	    android:layout_width="fill_parent"
-  		android:layout_height="wrap_content"
-  		android:padding="15dip"        
-	  	android:layout_margin="15dip" 
-	  	android:background="@drawable/background_login_div_bg" >
-  		<!-- 账号 -->
-  		
-	  	<TextView 
-	  		android:id="@+id/login_user"
-	  		android:layout_width="wrap_content"
-	  		android:layout_height="wrap_content"
-	  		android:layout_alignParentTop="true"
-	  		android:layout_marginTop="5dp"
-	  		android:text="@string/login_label_username"
-	  		style="@style/normalText"/> 
-	  		
-	  	<EditText 
-	  		android:id="@+id/login_user_input"
-	  		android:layout_width="fill_parent"
-	  		android:layout_height="wrap_content"
-	  		android:hint="@string/login_username_hint"
-	  		android:layout_below="@id/login_user"
-	  		android:singleLine="true"
-	  		android:inputType="text"/>
-	    <!-- 密码 text -->
-	    <TextView 
-	    	android:id="@+id/login_password"
-	    	android:layout_width="wrap_content"
-	    	android:layout_height="wrap_content"
-	    	android:layout_below="@id/login_user_input"
-	    	android:layout_marginTop="3dp"
-	    	android:text="@string/login_label_password"
-	    	style="@style/normalText"/>
-	    <EditText 
-	    	android:id="@+id/login_password_input"
-	    	android:layout_width="fill_parent"
-	    	android:layout_height="wrap_content"
-	    	android:layout_below="@id/login_password"
-	    	android:password="true"
-	    	android:singleLine="true"
-	    	android:inputType="textPassword" />
-	    <!-- 登录button -->
-	    <Button 
-	    	android:id="@+id/login_submit_button"
-	    	android:layout_width="144dp"
-	    	android:layout_height="wrap_content"
-	    	android:layout_below="@id/login_password_input"
-	    	android:layout_alignRight="@id/login_password_input"
-	    	android:text="@string/login_label_signin"
-	    	android:background="@drawable/submit_button_login" />
-  	</RelativeLayout>
-  
-  	<RelativeLayout 
-      	android:layout_width="fill_parent"
-      	android:layout_height="wrap_content" >
-		 <TextView  android:id="@+id/register_link"
-		     android:text="@string/login_register_link"
-		     android:layout_width="wrap_content"
-		     android:layout_height="wrap_content"
-		     android:layout_marginLeft="15dp"
-		     android:textColor="#888"
-		     android:textColorLink="#FF0066CC" />
-		 
-		
-  	</RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/login_div"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dip"
+        android:background="@drawable/background_login_div_bg"
+        android:padding="15dip" >
+
+        <!-- 账号 -->
+
+        <TextView
+            android:id="@+id/login_user"
+            style="@style/normalText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="5dp"
+            android:text="@string/login_label_username" />
+
+        <EditText
+            android:id="@+id/login_user_input"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/login_user"
+            android:hint="@string/login_username_hint"
+            android:inputType="text"
+            android:singleLine="true" />
+        <!-- 密码 text -->
+
+        <TextView
+            android:id="@+id/login_password"
+            style="@style/normalText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/login_user_input"
+            android:layout_marginTop="3dp"
+            android:text="@string/login_label_password" />
+
+        <EditText
+            android:id="@+id/login_password_input"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/login_password"
+            android:inputType="textPassword"
+            android:password="true"
+            android:singleLine="true" />
+        <!-- 登录button -->
+
+        <Button
+            android:id="@+id/login_submit_button"
+            android:layout_width="144dp"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@id/login_password_input"
+            android:layout_below="@id/login_password_input"
+            android:background="@drawable/submit_button_login"
+            android:text="@string/login_label_signin" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+
+        <TextView
+            android:id="@+id/register_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:text="@string/login_register_link"
+            android:textColor="#888"
+            android:textColorLink="#FF0066CC" />
+    </RelativeLayout>
+
 </LinearLayout>
