--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,6 +10,8 @@
         android:layout_height="40.0dip"
         android:background="#FFFFFF" >
 
+        <!-- tab1 -->
+
         <TextView
             android:id="@+id/text1"
             android:layout_width="fill_parent"
@@ -19,6 +21,7 @@
             android:text="@string/main_tab1"
             android:textColor="#000000"
             android:textSize="20.0dip" />
+        <!-- tab2 -->
 
         <TextView
             android:id="@+id/text2"
@@ -29,6 +32,7 @@
             android:text="@string/main_tab2"
             android:textColor="#000000"
             android:textSize="20.0dip" />
+        <!-- tab3 -->
 
         <TextView
             android:id="@+id/text3"
@@ -40,6 +44,7 @@
             android:textColor="#000000"
             android:textSize="20.0dip" />
     </LinearLayout>
+    <!-- 游标 -->
 
     <ImageView
         android:id="@+id/cursor"
@@ -47,6 +52,7 @@
         android:layout_height="wrap_content"
         android:scaleType="matrix"
         android:src="@drawable/cursor_main" />
+    <!-- tab容器 -->
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vPager"
@@ -57,4 +63,5 @@
         android:background="#000000"
         android:flipInterval="30"
         android:persistentDrawingCache="animation" />
+
 </LinearLayout>
