--- a/res/layout/activity_main_lay2.xml
+++ b/res/layout/activity_main_lay2.xml
@@ -2,14 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" 
-    android:background="@drawable/color_white">
+    android:background="@drawable/color_white"
+    android:orientation="vertical" >
 
-    <ListView 
+    <ListView
         android:id="@+id/activity_main_lay2_listview"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        
+        android:layout_height="wrap_content" >
     </ListView>
-    
+
 </LinearLayout>
