--- a/res/layout/activity_main_lay2_listsyle.xml
+++ b/res/layout/activity_main_lay2_listsyle.xml
@@ -5,6 +5,8 @@
     android:background="@drawable/color_white"
     android:orientation="vertical" >
 
+    <!-- 待修改成lay1样式 -->
+
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="4dp"
