--- a/res/layout/activity_main_lay3.xml
+++ b/res/layout/activity_main_lay3.xml
@@ -5,5 +5,10 @@
     android:orientation="vertical" 
     android:background="@drawable/color_white">
 
+    <ListView
+        android:id="@+id/activity_main_lay3_listview"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
     
 </LinearLayout>
