--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/background_login"
     android:orientation="vertical" >
 
@@ -12,7 +11,7 @@
 
     <ImageView
         android:id="@+id/recSys_logo"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
@@ -21,7 +20,7 @@
 
     <RelativeLayout
         android:id="@+id/login_div"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dip"
         android:background="@drawable/background_login_div_bg"
@@ -40,7 +39,7 @@
 
         <EditText
             android:id="@+id/login_user_input"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/login_user"
             android:hint="@string/login_username_hint"
@@ -59,7 +58,7 @@
 
         <EditText
             android:id="@+id/login_password_input"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/login_password"
             android:inputType="textPassword"
@@ -78,7 +77,7 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
         <TextView
