--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical" >
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="40.0dip"
         android:background="#FFFFFF" >
 
@@ -13,8 +13,8 @@
 
         <TextView
             android:id="@+id/text1"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1.0"
             android:gravity="center"
             android:text="@string/main_tab1"
@@ -24,8 +24,8 @@
 
         <TextView
             android:id="@+id/text2"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1.0"
             android:gravity="center"
             android:text="@string/main_tab2"
@@ -35,8 +35,8 @@
 
         <TextView
             android:id="@+id/text3"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1.0"
             android:gravity="center"
             android:text="@string/main_tab3"
@@ -47,7 +47,7 @@
 
     <ImageView
         android:id="@+id/cursor"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="matrix"
         android:src="@drawable/cursor_main" />
