--- a/res/layout/activity_main_lay1.xml
+++ b/res/layout/activity_main_lay1.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/color_white"
     android:orientation="vertical" >
 
     <ListView
         android:id="@+id/activity_main_lay1_listview"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </ListView>
 
