--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,6 +5,6 @@
         android:icon="@drawable/ic_action_refresh"
         android:orderInCategory="100"
         android:showAsAction="ifRoom|withText"
-        android:title="Refresh"/>
+        android:title="@string/refresh"/>
 
 </menu>
