--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -81,8 +81,15 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:text="@string/login_register_link"
+            android:autoLink="all"
             android:textColor="#888"
             android:textColorLink="#FF0066CC" />
+        <TextView
+            android:id="@+id/register_link2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/register_link"
+            android:layout_marginLeft="15dp" />
     </RelativeLayout>
 
 </LinearLayout>
